--- a/DataExploration.Rmd
+++ b/DataExploration.Rmd
@@ -5,6 +5,10 @@ date: "June 6, 2018"
 output: html_document
 ---
 
+```{r global_options, include=FALSE}
+knitr::opts_chunk$set(echo=FALSE, warning=FALSE, message=FALSE)
+```
+
 ```{r setup, include = F}
 library(tidyverse)
 library(sf)
@@ -14,10 +18,13 @@ library(RcppRoll)
 
 # Read shapefile
 indo <- st_read(dsn = "Data/IDN_adm_shp", layer = "IDN_adm1")
-# Production and area data
-aqua <- read_csv(file = "Data/indo_aqua_stats.csv", na = c("-"))
 # Simplify shapefile
 indo <- st_simplify(indo, dTolerance = 0.01)
+# Production and area data
+aqua <- read_csv(file = "Data/indo_aqua_stats.csv", na = c("-"))
+#Correct for Papua Barat/Irian Jaya Barat
+levels(indo$NAME_1)<- c(levels(indo$NAME_1), "Papua Barat")
+indo[which(indo$NAME_1 == "Irian Jaya Barat"), grep("^NAME_1$", colnames(indo))] <- "Papua Barat"
 ```
 
 ```{r}
@@ -38,12 +45,24 @@ Calculate summary statistics to use for maps:
 area_map <- aqua %>% 
   dplyr::filter(year == 2015 & type == 'brackish pond') %>% 
   select(NAME_1, area_hectares) 
+
+#Examine spread of Intensity
+
+# ints <- aqua %>% 
+#   arrange(-tons_per_ha) %>% 
+#   slice(1:100)
+# 
+# table(ints$type)
+# table(ints$year)
+# table(ints$province)
+
+
 # Intensity of production
 intensity_map <- aqua %>% 
   dplyr::filter(year == 2015 & type == 'brackish pond') %>% 
   select(NAME_1, tons_per_ha) %>% 
   mutate(tons_per_ha = ifelse(tons_per_ha > 1000, NA, tons_per_ha))
-# Area of brackish water ponds
+# Porudctions of brackish water ponds
 prod_map <- aqua %>% 
   dplyr::filter(year == 2015 & type == 'brackish pond') %>% 
   select(NAME_1, tons)
@@ -67,7 +86,18 @@ intensity_map <- left_join(indo, intensity_map)
 perc_change_map <- left_join(indo, perc_change_map)
 ```
 
-```{r}
+```{r, echo = F, warning = F}
+ggplot(area_map) +
+  geom_sf(aes(key = NAME_1, fill = area_hectares)) +
+  scale_fill_viridis(option = "D", labels = comma) +
+  guides(fill = guide_colorbar(barwidth = 20,
+                               barheight = 0.5,
+                               title = "Hectares",
+                               title.position = "top")) +
+  labs(title = "Area of brackish water pond aquaculture in 2015") +
+  theme_minimal() +
+  theme(legend.position = 'bottom')
+
 ggplot(area_map) +
   geom_sf(aes(key = NAME_1, fill = area_hectares)) +
   scale_fill_viridis(option = "D", labels = comma, direction = -1) +
@@ -75,7 +105,18 @@ ggplot(area_map) +
                                barheight = 0.5,
                                title = "Hectares",
                                title.position = "top")) +
-  labs(title = "Area of brackish water pond aquaculture in 2015") +
+  labs(title = "FOR COMPARISON (direction = -1)") +
+  theme_minimal() +
+  theme(legend.position = 'bottom')
+
+ggplot(area_map) +
+  geom_sf(aes(key = NAME_1, fill = area_hectares)) +
+  scale_fill_viridis(option = "A", labels = comma, direction = -1, begin = 0.2) +
+  guides(fill = guide_colorbar(barwidth = 20,
+                               barheight = 0.5,
+                               title = "Hectares",
+                               title.position = "top")) +
+  labs(title = "FOR COMPARISON (Magma)") +
   theme_minimal() +
   theme(legend.position = 'bottom')
 
@@ -111,7 +152,25 @@ ggplot(intensity_map) +
   
 # ggsave(filename = "sfg-aqua-figures/indo_brackish_intensity.png", width = 8, height = 6)
 ```
+```{r WP}
+# Intensity of production
+MC_ints_map <- aqua %>% 
+  dplyr::filter(year == 2015 & type == 'marine culture') %>% 
+  select(NAME_1, tons_per_ha)
 
+MC_ints_map <- left_join(indo, MC_ints_map)
+
+ggplot(MC_ints_map) +
+  geom_sf(aes(fill = tons_per_ha)) +
+  scale_fill_viridis(option = "D", direction = -1) +
+  guides(fill = guide_colorbar(barwidth = 20,
+                               barheight = 0.5,
+                               title = "Tons per hectare",
+                               title.position = "top")) +
+  labs(title = "Intensity of marine aquaculture in 2015") +
+  theme_minimal() +
+  theme(legend.position = 'bottom')
+```
 ```{r}
 ggplot(perc_change_map) +
   geom_sf(aes(fill = three_yr_avg_a)) +
@@ -144,14 +203,7 @@ ggplot(perc_change_map) +
 
 ## Production and Area Plots
 
-```{r}
-area_plot <- aqua %>% 
-  filter(province %in% c('Jawa Barat', 'Jawa Timur', 'Banten', 'Papua Barat')) %>% 
-  filter(type %in% c('brackish pond','marine culture')) %>% 
-  ggplot(aes(x = as.integer(year), y = area_hectares, color = province)) +
-  geom_line()+theme_classic()+labs(x = "Year", y = "Area (ha)")+scale_x_continuous(breaks = c(2005,2010,2015))+facet_wrap(~type, scales = "free")
-area_plot
-```
+
 
 ```{r}
 prod_plot <- aqua %>% 
@@ -173,7 +225,7 @@ ints_plot <- aqua %>%
 ints_plot
 ```
 
-```{r}
+```{r,fig.height= 7, fig.width=10}
 all_area_plot <- aqua %>% 
   filter (type %in% c('brackish pond')) %>% 
   ggplot(aes(x = as.integer(year), y = area_hectares))+
@@ -181,11 +233,14 @@ all_area_plot <- aqua %>%
 all_area_plot
 ```
 
-```{r}
+```{r,fig.height=7, fig.width=12}
 all_prod_plot <- aqua %>% 
   filter (type %in% c('brackish pond')) %>% 
   ggplot(aes(x = as.integer(year), y = tons))+
   geom_line() + theme_classic() + facet_wrap(~province, scales = "free")
 all_prod_plot
 ```
+
+
+
 
